<resources>
    <string name="app_name">PSP CRM</string>
    <string name="nav_clients">Клиенты</string>
    <string name="nav_history">История</string>
    <string name="nav_reports">Отчеты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Настройки</string>
    <string name="search">поиск</string>
    <string name="sort">Сортировка</string>
    <string name="addClient">Добавить клиента</string>
    <string name="title_activity_client">ClientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="full_name">Полное наименование</string>
    <string name="address_fact">Фактический адрес</string>
    <string name="addressUr">Юридический адрес</string>
    <string name="Phone">Номер телефона</string>
    <string name="Email">Email</string>
    <string name="INN_KPP">ИНН/КПП</string>
    <string name="Payment_account">Рассчетные счета</string>
    <string name="name">Название</string>
    <string name="Time">Время</string>
    <string name="Sum">Сумма</string>
    <string name="Date">Дата</string>
    <string name="Date_order">Дата заказа</string>
    <string name="time_of_order">Время заказа</string>
    <string name="client_name">Наименование контрагента</string>
    <string name="order_list">Лист заказа</string>
    <string name="Refresh">Обновить</string>
    <string name="Information">Дополнительная информация</string>
    <string name="exit">Закрыть приложение?</string>
    <string name="find_in_history">Найти в истории</string>
    <string name="add_email">Добавить почту</string>
    <string name="add_phone">Добавить телефон</string>
    <string name="email_input">Введите email</string>
    <string name="phone_input">Введите телефон</string>
    <string name="client_orders">Заказы клиента</string>
    <string name="find_client_orders">Показать заказы клиента</string>
    <string name="hide_client_orders">Скрыть заказы клиента</string>
    <string name="sells_graph">Графическое отображение количества продаж за определенный период c возможностью масштабирования</string>
    <string name="sum_sells">Всего продаж за период:</string>
    <string name="max_sells">Наибольшее кол-во продаж за период:</string>
    <string name="min_sells">"Наименьшее кол-во продаж за период:"</string>
    <string name="clients_graph">Графическое отображение количества продаж по клиентам и группам клиентов за определенный период</string>
    <string name="dynamic_sells">Анализ выручки по месяцам с процентным и абсолютным отношением</string>
    <string name="abcDisc">Анализ доходности реализации продуктов</string>
    <string name="xyzDisc">Анализ вариативности спроса на продукты</string>
    <string name="XYZ">XYZ анализ</string>
    <string name="ABC">ABC анализ</string>
    <string name="CrossAnalyze">Кросс анализ продукции</string>
    <string name="Cross">Кросс анализ</string>
    <string name="CrossDisc">Паралелльный анализ, объединяющий ABC и XYZ анализы</string>
    <string name="short_name">Краткое наименование</string>
    <string name="IP">Индивидуальный предприниматель</string>
    <string name="client_category">Категория клиента</string>
    <string name="client_ur">Юридическое лицо</string>
    <string name="del_client">Удалить клиента</string>
    <string name="total_sum">Итоговая сумма</string>
    <string name="show_client_events">Показать события клиента</string>
    <string name="hide_clients_events">Скрыть события клиента</string>
    <string name="client_events">События клиента</string>
    <string name="add_pay">Добавить расчетный счет</string>
    <string name="enter_bank_name">Наименование банка</string>
    <string name="enter_payment_account">Введите номер счета</string>
    <string name="add_event">Добавить событие</string>
    <string name="enter_date_event">Введите дату события</string>
    <string name="enter_event_time">Введите время события</string>
    <string name="enter_type_event">Укажите тип события</string>
</resources>